# OpenGLEngine

./: .gitignore  CMakeLists.txt  Debug.h  Engine.cpp  Engine.h  EngineOpenGL.cpp  EngineOpenGL.vcxproj  EngineOpenGL.vcxproj.filters  File.cpp  File.h  GameObject.cpp  GameObject.h  GameObjectParser.cpp  GameObjectParser.h  ICollider.cpp  ICollider.h  IComponent.h  MonoBehaviour.h  Object.cpp  Object.h  Object.object  Physics.cpp  Physics.h  README.md  Settings.h  Transform.h  Utility.h  Window.cpp  Window.h  main.cpp  test.object
Core/: Debug.h  GameObject.cpp  GameObject.h  Input.h  MonoBehaviour.h  Transform.h  Utility.h  Window.cpp  Window.h
GL/GLFW/include/GLFW/: glfw3.h
Parser/: File.cpp  File.h  GameObjectParser.cpp  GameObjectParser.h
Physics/: ICollider.cpp  ICollider.h  Physics.cpp  Physics.h
core/: GameObject.cpp  IComponent.h  MonoBehaviour.h  Settings.h  vec.h
glew/: Makefile
